--- a/views/base.html
+++ b/views/base.html
@@ -30,12 +30,12 @@
             </nav>
         </div>
     </header>
-    <div id="important" style="color:#cdbfe3; background-color:#6f5499; padding:30px 0; margin:-20px 0 20px 0;">
+    <!-- <div id="important" style="color:#cdbfe3; background-color:#6f5499; padding:30px 0; margin:-20px 0 20px 0;">
         <div class="container">
             <h1 style="color:#fff; font-size:60px">EB</h1>
             <p style="font-size:24px; line-height:48px">EB test</p>
         </div>
-    </div>
+    </div> -->
     {% block main %} {% endblock %}
     <footer style="background-color:#ddd; padding: 20px 0;">
         <div class="container">
