change ui & book db

--- a/views/base.html
+++ b/views/base.html
@@ -21,7 +21,7 @@
             <nav class="collapse navbar-collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
                     <!-- <li><a target="_blank" href="http://www.liaoxuefeng.com/">Get Courses</a></li> -->
-                    <li><a target="_blank" href="https://github.com/shamic/">Source Code</a></li>
+                    <li><a target="_blank" href="http://getbootstrap.com/">Source Code</a></li>
                     <li><a target="_blank" href="http://getbootstrap.com/">Resource</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
