--- a/views/addBook.html
+++ b/views/addBook.html
@@ -2,66 +2,72 @@
 
 <script>
 
-$(function () {
-    var vm = new Vue({
-        el: '#product-list',
-        data: {
-            products: []
-        },
-        methods: {
-            deleteProduct: function (id) {
-                var that = this;
-                // AJAX提交JSON:
-                $.ajax({
-                    type: 'delete',
-                    dataType: 'json',
-                    url: '/api/products/' + id
-                }).done(function (r) {
-                    console.log(r);
-                    var i;
-                    for (i=0; i<that.products.length; i++) {
-                        if (that.products[i].id === r.id) {
-                            that.products.splice(i, 1);
-                            return;
-                        }
-                    }
-                }).fail(function (jqXHR, textStatus) {
-                    // Not 200:
-                    alert('Error: ' + jqXHR.status);
-                });
+    $(function () {
+        var vm = new Vue({
+            el: '#product-list',
+            data: {
+                products: [],
+                books: []
+            },
+            methods: {
+                deleteProduct: function (id) {
+                    // var that = this;
+                    // // AJAX提交JSON:
+                    // $.ajax({
+                    //     type: 'delete',
+                    //     dataType: 'json',
+                    //     url: '/api/products/' + id
+                    // }).done(function (r) {
+                    //     console.log(r);
+                    //     var i;
+                    //     for (i = 0; i < that.products.length; i++) {
+                    //         if (that.products[i].id === r.id) {
+                    //             that.products.splice(i, 1);
+                    //             return;
+                    //         }
+                    //     }
+                    // }).fail(function (jqXHR, textStatus) {
+                    //     // Not 200:
+                    //     alert('Error: ' + jqXHR.status);
+                    // });
+                }
             }
-        }
-    });
+        });
 
-    $.getJSON('/api/products').done(function (data) {
-        vm.products = data.products;
-    }).fail(function (jqXHR, textStatus) {
-        alert('Error: ' + jqXHR.status);
-    });
-
-    $('#product-form').submit(function (e) {
-        e.preventDefault();
-        var
-            product = {
-                name: $(this).find('input[name=name]').val(),
-                manufacturer: $(this).find('input[name=manufacturer]').val(),
-                price: parseFloat($(this).find('input[name=price]').val())
-            };
-        // AJAX提交JSON:
-        $.ajax({
-            type: 'post',
-            dataType: 'json',
-            contentType: 'application/json',
-            url: '/api/products',
-            data: JSON.stringify(product)
-        }).done(function (r) {
-            vm.products.push(r);
+        $.getJSON('/api/products').done(function (data) {
+            vm.products = data.products;
         }).fail(function (jqXHR, textStatus) {
-            // Not 200:
             alert('Error: ' + jqXHR.status);
         });
+        $.getJSON('/api/books').done(function (data) {
+            vm.books = data.books;
+        }).fail(function (jqXHR, textStatus) {
+            alert('Error: ' + jqXHR.status);
+        });
+
+        $('#product-form').submit(function (e) {
+            // e.preventDefault();
+            // var
+            //     product = {
+            //         name: $(this).find('input[name=name]').val(),
+            //         manufacturer: $(this).find('input[name=manufacturer]').val(),
+            //         price: parseFloat($(this).find('input[name=price]').val())
+            //     };
+            // // AJAX提交JSON:
+            // $.ajax({
+            //     type: 'post',
+            //     dataType: 'json',
+            //     contentType: 'application/json',
+            //     url: '/api/products',
+            //     data: JSON.stringify(product)
+            // }).done(function (r) {
+            //     vm.products.push(r);
+            // }).fail(function (jqXHR, textStatus) {
+            //     // Not 200:
+            //     alert('Error: ' + jqXHR.status);
+            // });
+        });
     });
-});
 </script>
 
 <div class="container">
@@ -69,54 +75,47 @@ $(function () {
         <div class="col-md-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><span class="glyphicon glyphicon-user"></span> Create New Product</h3>
+                    <h3 class="panel-title">
+                        <span class="glyphicon glyphicon-user"></span> Create New Book</h3>
                 </div>
                 <div class="panel-body">
                     <form id="product-form">
                         <div class="form-group">
                             <label>Name</label>
-                            <input type="text" name="name" class="form-control" placeholder="Product name" value="">
-                            <p class="help-block">Product name</p>
+                            <input type="text" name="name" class="form-control" placeholder="Book name" value="">
+                            <p class="help-block">Book name</p>
                         </div>
                         <div class="form-group">
-                            <label>Manufacturer</label>
-                            <input type="text" name="manufacturer" class="form-control" placeholder="Manufacturer name" value="">
-                            <p class="help-block">Manufacturer name</p>
+                            <label>Author</label>
+                            <input type="text" name="author" class="form-control" placeholder="Book author" value="">
+                            <p class="help-block">author</p>
                         </div>
                         <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
+                            <label for="category">Book category</label>
+                            <select class="form-control" id="category">
+                                <option selected>Choose...</option>
+                                <option>科幻武侠</option>
+                                <option>历史小说</option>
+                                <option>经济管理</option>
+                                <option>人物传记</option>
+                                <option>青春言情</option>
+                            </select>
+                            <p class="help-block">category</p>
                         </div>
                         <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
+                            <label for="thumbnail">Cover image</label>
+                            <input type="file" class="form-control-file" id="thumbnail">
+                            <p class="help-block">thumbnail</p>
                         </div>
                         <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
+                            <label for="txtFile">Txt file</label>
+                            <input type="file" class="form-control-file" id="txtFile">
+                            <p class="help-block">txt file</p>
                         </div>
                         <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
-                        </div>
-                        <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
-                        </div>
-                        <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
-                        </div>
-                        <div class="form-group">
-                            <label>Price</label>
-                            <input type="number" name="price" class="form-control" placeholder="Product price" value="">
-                            <p class="help-block">Product price</p>
+                            <label>Introduction</label>
+                            <textarea class="form-control" style="resize: vertical;" id="introduction" rows="3"></textarea>
+                            <p class="help-block">introduction</p>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Create</button>
@@ -130,31 +129,42 @@ $(function () {
     <div class="col-md-8">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title"><span class="glyphicon glyphicon-th-list"></span> Products</h3>
+                <h3 class="panel-title">
+                    <span class="glyphicon glyphicon-th-list"></span> Books</h3>
             </div>
             <div class="panel-body">
                 <table id="product-list" class="table table-hover">
                     <thead>
                         <tr>
-                            <th style="width:50px"></th>
-                            <th>Product</th>
-                            <th style="width:150px">Price</th>
-                            <th style="width:50px"></th>
+                            <th style="width:100px"></th>
+                            <th>Books</th>
+                            <th style="width:150px">Rating</th>
+                            <!-- <th style="width:50px"></th> -->
                         </tr>
                     </thead>
                     <tbody>
-                        <tr v-for="p in products">
+                        <tr v-for="p in books">
                             <td>
                                 <img class="media-object" style="width:40px; height:40px;" src="/static/images/icon.png">
                             </td>
                             <td>
                                 <h4 class="media-heading" v-text="p.name"></h4>
-                                <p><span v-text="p.manufacturer"></span> <span><a v-on:click="deleteProduct(p.id)" href="#0">delete</a></span></p>
+                                <p>
+                                    <span v-text="p.category"></span>
+                                    <span>|</span>
+                                    <span v-text="p.author">
+                                </p>
+                                <p v-text="p.introduction" style="color:silver;"></p>
                             </td>
                             <td>
-                                <p style="font-size:2em">¥ <span v-text="p.price"></span></p>
+                                <p style="font-size:2em; color:red;">
+                                    <span v-text="p.rating"></span>
+                                    <span style="font-size:1em;">分</span>
+                                </p>
                             </td>
-                            <td><a target="_blank" v-bind:href="'http://search.jd.com/Search?enc=utf-8&keyword=' + encodeURIComponent(p.name)">Buy</a>
+                            <td>
+                                <!-- <a target="_blank" v-bind:href="'http://search.jd.com/Search?enc=utf-8&keyword=' + encodeURIComponent(p.name)">Buy</a> -->
+                                <!-- <a target="_blank">Edit</a> -->
                         </tr>
                     </tbody>
                 </table>
