--- a/views/base.html
+++ b/views/base.html
@@ -8,8 +8,9 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/vue.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/vue.min.js"></script>
+
 </head>
 
 <body>
@@ -25,7 +26,7 @@
                     <li><a target="_blank" href="http://getbootstrap.com/">Resource</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/signout">Sign Out</a></li>
+                    <li><a href="/">Sign Out</a></li>
                 </ul>
             </nav>
         </div>
