--- a/views/addBook.html
+++ b/views/addBook.html
@@ -5,13 +5,15 @@
 <script src="/static/js/locales/zh.js"></script>
 
 <script>
-
     $(function () {
         var vm = new Vue({
             el: '#product-list',
             data: {
                 products: [],
-                books: []
+                books: [],
+                postData: null,
+                bookFile: '',
+                bookImg: ''
             },
             methods: {
                 deleteProduct: function (id) {
@@ -34,6 +36,37 @@
                     //     // Not 200:
                     //     alert('Error: ' + jqXHR.status);
                     // });
+                },
+
+                sendForm: function(postData) {
+                    var that = this;
+                    if (that.bookFile.length == 0 || that.bookImg.length == 0) {
+                        return;
+                    }
+                    // AJAX提交JSON:
+                    vm.postData.thumbnail_url = vm.bookImg;
+                    vm.postData.txt_url = vm.bookFile;
+                    $.ajax({
+                        type: 'post',
+                        dataType: 'json',
+                        contentType: 'application/json',
+                        url: '/api/books',
+                        data: JSON.stringify(vm.postData)
+                    }).done(function (r) {
+                        r.data.thumbnail_url = r.data.thumbnail_url || "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522478341968&di=c60886853463d9f62c8c49d6fe270426&imgtype=0&src=http%3A%2F%2Fwww.memobook.com.tw%2Fsaved%2F13%2F131210%2F13121009462755%2Fthumb%2Fp8_GK5DYP_1.jpg";
+                        that.books.unshift(r.data);
+                        vm.postData = null;
+                        vm.bookFile = '';
+                        vm.bookImg = '';
+                        $(":input", "#product-form")
+                            .not(":button", ":reset", "hidden", "submit")
+                            .val("")
+                            .removeAttr("checked")
+                            .removeAttr("selected");
+                    }).fail(function (jqXHR, textStatus) {
+                        // Not 200:
+                        alert('Error: ' + jqXHR.status);
+                    });
                 }
             }
         });
@@ -45,37 +78,20 @@
         });
 
         $('#product-form').submit(function (e) {
+            $('#createBtn').disabled=false;
             e.preventDefault();
             if ($('#category').val() == 'Choose...') {
                 $('#myModel').modal('show');
                 $('#myModel').find('.modal-body').text('请选择分类');
             } else {
-                var
-                    book = {
-                        name: $(this).find('input[name=name]').val(),
-                        author: $(this).find('input[name=author]').val(),
-                        introduction: $('#introduction').val(),
-                        category: $('#category').val()
-                    };
-                // AJAX提交JSON:
-                $.ajax({
-                    type: 'post',
-                    dataType: 'json',
-                    contentType: 'application/json',
-                    url: '/api/books',
-                    data: JSON.stringify(book)
-                }).done(function (r) {
-                    r.data.thumbnail_url = r.data.thumbnail_url || "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522478341968&di=c60886853463d9f62c8c49d6fe270426&imgtype=0&src=http%3A%2F%2Fwww.memobook.com.tw%2Fsaved%2F13%2F131210%2F13121009462755%2Fthumb%2Fp8_GK5DYP_1.jpg";
-                    vm.books.unshift(r.data);
-                    $(":input", "#product-form")
-                        .not(":button", ":reset", "hidden", "submit")
-                        .val("")
-                        .removeAttr("checked")
-                        .removeAttr("selected");
-                }).fail(function (jqXHR, textStatus) {
-                    // Not 200:
-                    alert('Error: ' + jqXHR.status);
-                });
+                vm.postData = {
+                    name: $(this).find('input[name=name]').val(),
+                    author: $(this).find('input[name=author]').val(),
+                    introduction: $('#introduction').val(),
+                    category: $('#category').val()
+                };
+                $('#txtFile').fileinput('upload');
+                $('#thumbnail').fileinput('upload');
             }
         });
 
@@ -85,6 +101,7 @@
             showPreview: false,
             language: 'zh',
             browseLabel: 'Txt file',
+            uploadUrl: 'uploadFile',
             browseClass: 'btn btn-default',
             allowedFileTypes: ['text'], // 限制文件类型为图片
             allowedFileExtensions: ['text'], // 限制文件后缀名为['image', 'html', 'text', 'video', 'audio', 'flash', 'object']
@@ -106,11 +123,20 @@
                     '</div>'
             }
         });
+        $('#txtFile').on('fileerror', function (event, data, msg) {
+            console.log(JSON.stringify(data) + '🌹🌹🌹🌹🌹' + JSON.stringify(msg));
+        });
+        $('#txtFile').on('fileuploaded', function (event, data, previewId, index) {
+            console.log('🌹🌹fileuploaded🌹🌹' + JSON.stringify(data.response));
+            vm.bookFile = data.response.data;
+            vm.sendForm(vm.postData);
+        });
 
         $('#thumbnail').fileinput({
             showUpload: false,
             previewFileType: 'any',
             showPreview: false,
+            uploadUrl: 'uploadFile',
             language: 'zh',
             browseLabel: 'Cover image',
             browseClass: 'btn btn-default',
@@ -133,6 +159,14 @@
                     '    <div class="file-caption-name">{caption}{size}</div>\n' +
                     '</div>'
             }
+        });
+        $('#thumbnail').on('fileerror', function (event, data, msg) {
+            console.log(JSON.stringify(data) + '🌹🌹🌹🌹🌹' + JSON.stringify(msg));
+        });
+        $('#thumbnail').on('fileuploaded', function (event, data, previewId, index) {
+            console.log("🌹🌹fileuploaded🌹🌹" + JSON.stringify(data.response));
+            vm.bookImg = data.response.data;
+            vm.sendForm(vm.postData);
         });
 
         // $("#txtFile").on("change", function () {
@@ -200,12 +234,12 @@
                         </div>
                         <div class="form-group">
                             <label for="thumbnail">Cover image</label>
-                            <input type="file" class="form-control-file" id="thumbnail" accept="image/*">
+                            <input type="file" class="form-control-file" name="file" id="thumbnail" accept="image/*">
                             <p class="help-block">thumbnail</p>
                         </div>
                         <div class="form-group">
                             <label for="txtFile">Txt file</label>
-                            <input type="file" class="form-control-file" id="txtFile" accept=".txt">
+                            <input type="file" class="form-control-file" name="file" id="txtFile" accept=".txt">
                             <p class="help-block">txt file</p>
                         </div>
                         <div class="form-group">
@@ -214,7 +248,7 @@
                             <p class="help-block">introduction</p>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Create</button>
+                            <button type="submit" id="createBtn" class="btn btn-primary">Create</button>
                         </div>
                     </form>
                 </div>
