--- a/views/addBook.html
+++ b/views/addBook.html
@@ -54,6 +54,9 @@
                         data: JSON.stringify(vm.postData)
                     }).done(function (r) {
                         r.data.thumbnail_url = r.data.thumbnail_url || "https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1522478341968&di=c60886853463d9f62c8c49d6fe270426&imgtype=0&src=http%3A%2F%2Fwww.memobook.com.tw%2Fsaved%2F13%2F131210%2F13121009462755%2Fthumb%2Fp8_GK5DYP_1.jpg";
+                        if (r.data.thumbnail_url.indexOf('http') < 0) {
+                            r.data.thumbnail_url = '/images/' + r.data.thumbnail_url;
+                        }
                         that.books.unshift(r.data);
                         vm.postData = null;
                         vm.bookFile = '';
@@ -63,8 +66,10 @@
                             .val("")
                             .removeAttr("checked")
                             .removeAttr("selected");
+                        $('#createBtn').disabled = false;
                     }).fail(function (jqXHR, textStatus) {
                         // Not 200:
+                        $('#createBtn').disabled = false;
                         alert('Error: ' + jqXHR.status);
                     });
                 }
@@ -72,13 +77,18 @@
         });
 
         $.getJSON('/api/books').done(function (res) {
+            res.data.map(element => {
+                if (element.thumbnail_url.indexOf('http') < 0) {
+                    element.thumbnail_url = '/images/' + element.thumbnail_url;
+                }
+            });
             vm.books = res.data;
         }).fail(function (jqXHR, textStatus) {
             alert('Error: ' + jqXHR.status);
         });
 
         $('#product-form').submit(function (e) {
-            $('#createBtn').disabled=false;
+            $('#createBtn').disabled = true;
             e.preventDefault();
             if ($('#category').val() == 'Choose...') {
                 $('#myModel').modal('show');
@@ -168,35 +178,6 @@
             vm.bookImg = data.response.data;
             vm.sendForm(vm.postData);
         });
-
-        // $("#txtFile").on("change", function () {
-        //     // var filePath = $(this).val();         //获取到input的value，里面是文件的路径  
-        //     var file = $('#txtFile')["0"].files;    //获取上传的文件  
-        //     var fileName = file[0].name;
-        //     var fileSize = (file[0].size / 1024).toFixed(2);
-        //     // 获取文件的格式为.txt 
-        //     var fileFormat = fileName.substring(fileName.lastIndexOf(".")).toLowerCase();
-        //     if (checkFileFormat(fileFormat) == false) {
-        //         console.log("上传的文件类型有误！");
-        //         $('#myModel').modal('show');
-        //         $('#myModel').find('.modal-body').text('上传的文件类型有误！(支持格式：txt)');
-        //         return;
-        //     }
-        //     // 文件大小不超过200KB；  
-        //     // if (fileSize > 200) {
-        //     //     console.log("上传的文件太大了！");
-        //     //     return;
-        //     // }
-
-        // });
-
-        // // 校验文件格式  
-        // function checkFileFormat(format) {
-        //     if (format.match(/.txt/)) {
-        //         return true;
-        //     }
-        //     return false;
-        // }
     });
 </script>
 
@@ -275,7 +256,7 @@
                     <tbody>
                         <tr v-for="p in books">
                             <td style="position: relative;">
-                                <img class="media-object" style="width:100px; height:135px;position: absolute;top: 50%;transform: translateY(-50%);" v-bind:src="p.thumbnail_url">
+                                <img class="media-object" style="width:100px;padding: 10px 10px;position: absolute;top: 50%;transform: translateY(-50%);" v-bind:src="p.thumbnail_url">
                             </td>
                             <td>
                                 <h4 class="media-heading" v-text="p.name"></h4>
