--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
 
   <body class="text-center">
     <form class="form-signin" id="form-signin">
-      <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <img class="mb-4" src="http://7xilxa.com1.z0.glb.clouddn.com/eb-logo.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Email address</label>
       <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -56,24 +56,28 @@
         e.preventDefault();
         var
             user = {
-                email: $(this).find('input[name=name]').val(),
+                email: $(this).find('input[name=email]').val(),
                 password: $(this).find('input[name=password]').val(),
             };
-        // AJAX提交JSON:
-        // $.ajax({
-        //     type: 'post',
-        //     dataType: 'json',
-        //     contentType: 'application/json',
-        //     url: '/api/products',
-        //     data: JSON.stringify(product)
-        // }).done(function (r) {
-        //     vm.products.push(r);
-        // }).fail(function (jqXHR, textStatus) {
-        //     // Not 200:
-        //     alert('Error: ' + jqXHR.status);
-        // });
-        // alert('Error: ');
-        window.location.href = '/addBook';
+        AJAX提交JSON:
+        $.ajax({
+            type: 'post',
+            dataType: 'json',
+            contentType: 'application/json',
+            url: '/api/login',
+            data: JSON.stringify(user)
+        }).done(function (r) {
+            console.log(JSON.stringify(r));
+            if (r.code == -101 || r.code == -102) {
+              alert('Error: ' + r.msg);
+            } else {
+              localStorage.setItem('bean', JSON.stringify(r.data));
+              window.location.href = '/addBook';
+            }
+        }).fail(function (jqXHR, textStatus) {
+            // Not 200:
+            alert('Error: ' + jqXHR.status);
+        });
     });
     </script>
     
