--- a/views/login.html
+++ b/views/login.html
@@ -51,6 +51,7 @@
             }
         });
     });
+    localStorage.removeItem('bean');
 
     $('#form-signin').submit(function (e) {
         e.preventDefault();
