--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,55 @@
 {% extends "base2.html" %} {% block main %}
 
+<script src="/static/js/vue.min.js"></script>
+
+<script>
+    $(function () {
+
+        var bean = JSON.parse(localStorage.getItem('bean'));
+        console.log(JSON.stringify(bean));
+
+        var vm = new Vue({
+            el: '#product-list',
+            data: {
+                books: []
+            },
+            methods: {
+                deleteProduct: function (id) {
+                }
+            }
+        });
+
+        $.ajax({
+            type: 'get',
+            headers: {
+                'Authorization': 'Bearer ' + bean.token
+            },
+            dataType: 'json',
+            contentType: 'application/json',
+            url: '/api/books'
+        }).done(function (res) {
+            res.data.map(element => {
+                if (element.thumbnail_url.indexOf('http') < 0) {
+                    element.thumbnail_url = '/images/' + element.thumbnail_url;
+                }
+            });
+            vm.books = res.data;            
+        }).fail(function (jqXHR, textStatus) {
+            alert('Error: ' + jqXHR.status);
+        });
+        // $.getJSON('/api/books').done(function (res) {
+        //     res.data.map(element => {
+        //         if (element.thumbnail_url.indexOf('http') < 0) {
+        //             element.thumbnail_url = '/images/' + element.thumbnail_url;
+        //         }
+        //     });
+        //     vm.books = res.data;
+        // }).fail(function (jqXHR, textStatus) {
+        //     alert('Error: ' + jqXHR.status);
+        // });
+    });
+</script>
+
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
@@ -25,128 +75,36 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
             <h1>Books</h1>
             <div class="table-responsive">
-                <table class="table table-striped table-sm">
+                <table id="product-list" class="table table-striped table-sm">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Header</th>
-                            <th>Header</th>
-                            <th>Header</th>
-                            <th>Header</th>
+                            <th style="width:150px;border-bottom: 0;">Corer Image</th>
+                            <th style="border-bottom: 0;">Book</th>
+                            <!-- <th style="width:100px;border-bottom: 0;">Rating</th> -->
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>1,001</td>
-                            <td>Lorem</td>
-                            <td>ipsum</td>
-                            <td>dolor</td>
-                            <td>sit</td>
-                        </tr>
-                        <tr>
-                            <td>1,002</td>
-                            <td>amet</td>
-                            <td>consectetur</td>
-                            <td>adipiscing</td>
-                            <td>elit</td>
-                        </tr>
-                        <tr>
-                            <td>1,003</td>
-                            <td>Integer</td>
-                            <td>nec</td>
-                            <td>odio</td>
-                            <td>Praesent</td>
-                        </tr>
-                        <tr>
-                            <td>1,003</td>
-                            <td>libero</td>
-                            <td>Sed</td>
-                            <td>cursus</td>
-                            <td>ante</td>
-                        </tr>
-                        <tr>
-                            <td>1,004</td>
-                            <td>dapibus</td>
-                            <td>diam</td>
-                            <td>Sed</td>
-                            <td>nisi</td>
-                        </tr>
-                        <tr>
-                            <td>1,005</td>
-                            <td>Nulla</td>
-                            <td>quis</td>
-                            <td>sem</td>
-                            <td>at</td>
-                        </tr>
-                        <tr>
-                            <td>1,006</td>
-                            <td>nibh</td>
-                            <td>elementum</td>
-                            <td>imperdiet</td>
-                            <td>Duis</td>
-                        </tr>
-                        <tr>
-                            <td>1,007</td>
-                            <td>sagittis</td>
-                            <td>ipsum</td>
-                            <td>Praesent</td>
-                            <td>mauris</td>
-                        </tr>
-                        <tr>
-                            <td>1,008</td>
-                            <td>Fusce</td>
-                            <td>nec</td>
-                            <td>tellus</td>
-                            <td>sed</td>
-                        </tr>
-                        <tr>
-                            <td>1,009</td>
-                            <td>augue</td>
-                            <td>semper</td>
-                            <td>porta</td>
-                            <td>Mauris</td>
-                        </tr>
-                        <tr>
-                            <td>1,010</td>
-                            <td>massa</td>
-                            <td>Vestibulum</td>
-                            <td>lacinia</td>
-                            <td>arcu</td>
-                        </tr>
-                        <tr>
-                            <td>1,011</td>
-                            <td>eget</td>
-                            <td>nulla</td>
-                            <td>Class</td>
-                            <td>aptent</td>
-                        </tr>
-                        <tr>
-                            <td>1,012</td>
-                            <td>taciti</td>
-                            <td>sociosqu</td>
-                            <td>ad</td>
-                            <td>litora</td>
-                        </tr>
-                        <tr>
-                            <td>1,013</td>
-                            <td>torquent</td>
-                            <td>per</td>
-                            <td>conubia</td>
-                            <td>nostra</td>
-                        </tr>
-                        <tr>
-                            <td>1,014</td>
-                            <td>per</td>
-                            <td>inceptos</td>
-                            <td>himenaeos</td>
-                            <td>Curabitur</td>
-                        </tr>
-                        <tr>
-                            <td>1,015</td>
-                            <td>sodales</td>
-                            <td>ligula</td>
-                            <td>in</td>
-                            <td>libero</td>
+                        <tr v-for="p in books">
+                            <td style="position: relative;">
+                                <img class="media-object" style="width:100px;padding: 10px 10px;position: absolute;top: 50%;transform: translateY(-50%);"
+                                    v-bind:src="p.thumbnail_url">
+                            </td>
+                            <td>
+                                <h2 class="media-heading" v-text="p.name"></h2>
+                                <p>
+                                    <span v-text="p.author"></span>
+                                    <span>|</span>
+                                    <span v-text="p.category">
+                                </p>
+                                <p v-text="p.introduction" style="color:silver;"></p>
+                            </td>
+                            <!-- <td style="position: relative;">
+                                <p style="font-size:2em; color:red;height:auto;position: absolute;top: 50%;transform: translateY(-50%);">
+                                    <span v-text="p.rating"></span>
+                                    <span v-if="p.rating" style="font-size:14px;">分
+                                </p>
+                            </td> -->
+                            <td>
                         </tr>
                     </tbody>
                 </table>
