--- a/views/home.html
+++ b/views/home.html
@@ -35,10 +35,16 @@
                     }
                 });
                 vm.books = res.data;  
-            }   
+            } else {
+                $('#myModel').modal('show');
+                $('#myModel').find('.modal-body').text(res.msg);
+            }
         }).fail(function (jqXHR, textStatus) {
             alert('Error: ' + jqXHR.status);
         });
+        $('#myModel').on('hidden.bs.modal', function (e) {
+            window.location.href = '/';
+        })
         // $.getJSON('/api/books').done(function (res) {
         //     res.data.map(element => {
         //         if (element.thumbnail_url.indexOf('http') < 0) {
@@ -60,14 +66,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="#">
                             <span data-feather="home"></span>
-                            Books
+                            书库
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/addBook">
                             <span data-feather="file"></span>
-                            Create Book
+                            新建
                         </a>
                     </li>
                 </ul>
@@ -75,13 +81,13 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <h1>Books</h1>
+            <h1>书库</h1>
             <div class="table-responsive">
                 <table id="product-list" class="table table-striped table-sm">
                     <thead>
                         <tr>
-                            <th style="width:150px;border-bottom: 0;">Corer Image</th>
-                            <th style="border-bottom: 0;">Book</th>
+                            <th style="width:150px;border-bottom: 0;">图书封面</th>
+                            <th style="border-bottom: 0;">图书信息</th>
                             <!-- <th style="width:100px;border-bottom: 0;">Rating</th> -->
                         </tr>
                     </thead>
@@ -98,7 +104,7 @@
                                     <span>|</span>
                                     <span v-text="p.category">
                                 </p>
-                                <p v-text="p.introduction" style="color:silver;"></p>
+                                <p v-text="p.introduction" style="color:silver; word-break: break-all;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;"></p>
                             </td>
                             <!-- <td style="position: relative;">
                                 <p style="font-size:2em; color:red;height:auto;position: absolute;top: 50%;transform: translateY(-50%);">
