--- a/views/base2.html
+++ b/views/base2.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Icons -->
-    <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
+    <script src="../static/js/feather.min.js"></script>
     <script>
       feather.replace()
     </script>
