--- a/views/home.html
+++ b/views/home.html
@@ -81,14 +81,43 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-            <h1>书库</h1>
-            <div class="table-responsive">
-                <table id="product-list" class="table table-striped table-sm">
+                <!-- <button onclick="handleClick()">立即下载</button>
+                <iframe name="myIframe" style="display:none"></iframe>
+                <script>
+                 const handleClick = () => {
+                    window.open('/download?fileType=1&fileName=1522936478840.txt', 'myIframe');
+                    // var data = {
+                    //     fileType: 1,
+                    //     fileName: '1522936478840.txt'
+                    // }
+                    // $.ajax({
+                    //     type: 'post',
+                    //     dataType: 'json',
+                    //     contentType: 'application/json',
+                    //     url: '/download',
+                    //     data: JSON.stringify(data)
+                    // }).done(function (res) {
+                    //     console.log(JSON.stringify(res));
+                    // }).fail(function (jqXHR, textStatus) {
+                    //     alert('Error: ' + jqXHR.status);
+                    // });
+                 }
+                </script> -->
+            <h1 style="margin-bottom: 20px;">书库</h1>
+            <!-- <nav class="navbar navbar-light justify-content-between" style="background-color: #e3f2fd;">
+                <a class="navbar-brand">Navbar</a>
+                <form class="form-inline">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </nav> -->
+            <div class="table-responsive" style="border-bottom: 1px solid #dee2e6;margin-bottom: 30px;">
+                <table id="product-list" class="table table-hover">
                     <thead>
                         <tr>
-                            <th style="width:150px;border-bottom: 0;">图书封面</th>
-                            <th style="border-bottom: 0;">图书信息</th>
-                            <!-- <th style="width:100px;border-bottom: 0;">Rating</th> -->
+                            <th style="width:150px;border-bottom: 0;border-top: 0;">图书封面</th>
+                            <th style="border-bottom: 0;border-top: 0;">图书信息</th>
+                            <th style="width:100px;border-bottom: 0;border-top: 0;">操作</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -106,17 +135,34 @@
                                 </p>
                                 <p v-text="p.introduction" style="color:silver; word-break: break-all;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 3;-webkit-box-orient: vertical;"></p>
                             </td>
-                            <!-- <td style="position: relative;">
-                                <p style="font-size:2em; color:red;height:auto;position: absolute;top: 50%;transform: translateY(-50%);">
+                            <td style="position: relative;">
+                                <!-- <p style="font-size:2em; color:red;height:auto;position: absolute;top: 50%;transform: translateY(-50%);">
                                     <span v-text="p.rating"></span>
                                     <span v-if="p.rating" style="font-size:14px;">分
+                                </p> -->
+                                <p class="btn-group" role="group" aria-label="operate" style="position: absolute;top: 50%;transform: translateY(-50%);">
+                                    <button type="button" class="btn btn-link btn-sm">编辑</button>
+                                    <button type="button" class="btn btn-link btn-sm">删除</button>
                                 </p>
-                            </td> -->
+                            </td>
                             <td>
                         </tr>
                     </tbody>
                 </table>
             </div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end">
+                    <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
         </main>
     </div>
 </div>
