--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
     $(function () {
 
         var bean = JSON.parse(localStorage.getItem('bean'));
-        console.log(JSON.stringify(bean));
+        // console.log(JSON.stringify(bean));
 
         var vm = new Vue({
             el: '#product-list',
